- Updated the readme file - Added so that /ski/forum/?sid=blabla now is matched correctly

--- a/manifest.json
+++ b/manifest.json
@@ -28,7 +28,9 @@
 		},
 		{
 			"matches": [
-				"*://snowheads.com/ski-forum/"
+				"*://snowheads.com/ski-forum/",
+				"*://snowheads.com/ski-forum/index.php*",
+				"*://snowheads.com/ski-forum/?*"
 			],
 			"css": ["css/forumlist.css"]
 		},
